Fixed some missing content. There is a minor spacing issue on the Information Center page that I am unsure how to fix.

--- a/citizens/css/style.css
+++ b/citizens/css/style.css
@@ -303,7 +303,7 @@ td{
 
 #headlines2{
 	background-color: #f1f1f1;
-	border-radius: 5px;
+	/*border-radius: 5px;*/
 	color: #11445f;
 	font-size: small;
 	padding:20px;
@@ -346,7 +346,7 @@ td{
 	color: #053c62;
 	padding: 10px;
 	margin-bottom: 15px;
-}
+	
 
 /*Internal*/
 
